[package]
name = "ncclient_3"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7.0"
actix-web-prom = "0.8.0"
lazy_static = "1.4.0"
prometheus = "0.13.4"
quick-xml = { version = "0.32.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["rc", "derive"] }
serde_json = "1.0.117"
ssh2 = "0.9.4"

